# Aether-Quant

./: .dockerignore  .env.example  .env.production.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RELEASE_NOTES.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CLIENT_HANDOFF.md  DEPLOY_RENDER.md
scripts/: generate_keys.ps1  write_env_production.ps1
src/aetherquant/: __init__.py  __main__.py  allocation.py  backtest.py  cli.py  config.py  logging_config.py  optimization.py  portfolio.py  rate_limit.py  risk.py  storage.py  strategy.py
src/aetherquant/data/: __init__.py  base.py  yfinance_provider.py
src/aetherquant/domain/: __init__.py  models.py
src/aetherquant/execution/: __init__.py  base.py  live_broker.py  models.py  paper_broker.py  trading_engine.py
src/aetherquant/strategies/: __init__.py  base.py  momentum.py
src/aetherquant/web/: __init__.py  app.py
tests/: test_backtest_engine.py  test_cli.py  test_config.py  test_execution.py  test_momentum_strategy.py  test_optimization.py  test_package_modules.py  test_rate_limit.py  test_risk.py  test_storage.py  test_strategy.py  test_web_app.py  test_yfinance_provider.py
