[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aetherquant"
version = "0.1.0"
description = "Production-grade foundation for quantitative research and trading workflows"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AetherQuant Team" }]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.13",
  "yfinance>=0.2.54",
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "fastapi>=0.115",
  "uvicorn>=0.30"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "pandas-stubs>=2.2.2",
  "httpx>=0.27"
]

[project.scripts]
aetherquant = "aetherquant.cli:main"
aetherquant-web = "aetherquant.web.app:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=aetherquant --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["aetherquant"]
